# lunar-horizon-optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_README.md  CONSTELLATION_OPTIMIZATION_COMPLETE.md  COVERAGE_IMPROVEMENT_PLAN.md  DEV_PIPELINE.md  LICENSE  MISSION_COMPLETE.md  Makefile  PROJECT_AUDIT.md  README.md  USE_CASES.md  consolidate_docs_final.py  consolidate_documentation.py  dev-pipeline.sh  environment.yml  lunar_opt.py  my_mission.json  package-lock.json  package.json  pyproject.toml  requirements-ray.txt  requirements.txt  sample_mission_config.json  setup.py  setup_integrated_system.py
benchmarks/: ray_optimization_benchmark.py
corrected_visualizations/: 11_powered_descent_mission_financial_data.json  12_powered_descent_mission_financial_data.json  13_powered_descent_quick_financial_data.json
docs/: 3D_LANDING_VISUALIZATION_GUIDE.md  3D_TRAJECTORY_ISSUE_ANALYSIS.md  CAPABILITIES.md  CLEANUP_REPORT.md  CLI_HELP_REFERENCE.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_POWERED_DESCENT_INTEGRATION.md  COST_MODEL_UPGRADE.md  DIFFERENTIABLE_OPTIMIZATION.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_PROJECT_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MULTI_MISSION_ARCHITECTURE.md  MULTI_MISSION_IMPLEMENTATION.md  MULTI_MISSION_USER_GUIDE.md  Makefile  PERFORMANCE_AND_USAGE.md  POWERED_DESCENT_COMPLETE_SUMMARY.md  POWERED_DESCENT_COST_INTEGRATION.md  POWERED_DESCENT_SCENARIOS.md  POWERED_DESCENT_VISUALIZATIONS.md  PRD_COMPLIANCE.md  PROGRESS_ISSUE_RESOLUTION.md  PROGRESS_THREADING_FIX.md  PROGRESS_TRACKING_GUIDE.md  PROJECT_STATUS.md  README.md  REAL_OPTIMIZER_ONLY.md  RESULTS_GITIGNORE_INFO.md  SCENARIO_GUIDE.md  TESTING.md  TESTING_GUIDELINES.md  TESTING_IMPROVEMENTS.md  TEST_ANALYSIS_SUMMARY.md  TEST_SUITE_COMPLETION_PLAN.md  USER_GUIDE.md  USE_CASES_IMPLEMENTATION_COMPLETE.md  USE_CASES_IMPLEMENTATION_PLAN.md  VISUALIZATION_ISSUES_AND_FIXES.md  (+15 more)
docs/archive/: DOCUMENTATION_SUMMARY.md  FINAL_PROJECT_STATUS.md  USER_GUIDE_UPDATE.md  project_summary.md  trajectory_modules.md  trajectory_tests.md
docs/demos/: README.md  index.html
docs/guides/: CLI_PROGRESS_GUIDE.md  CLI_USER_GUIDE.md  HOW_TO_REPRODUCE_ANALYSIS.md  NEW_CLI_USER_GUIDE.md
docs/tasks/: task_10_extensibility_documentation.md  task_4_documentation.md
docs/technical/: CONTINUOUS_THRUST_GUIDE.md  RAY_PARALLELIZATION.md
docs/testing/: testing_COMPREHENSIVE_TEST_INFRASTRUCTURE_DOCUMENTATION.md  testing_COMPREHENSIVE_TEST_SUITE_ANALYSIS.md  testing_TEST_DOCUMENTATION_INDEX.md  testing_run_tests_conda_py312.md
examples/: README.md  advanced_trajectory_test.py  config_after_upgrade.json  config_before_upgrade.json  constellation_optimization_demo.py  continuous_thrust_demo.py  cost_comparison_demo.py  debug_trajectory_visualization.py  differentiable_optimization_demo.py  final_integration_test.py  fix_visualization_demo.py  integration_test.py  powered_descent_optimization.py  powered_descent_visualization_demo.py  quick_start.py  simple_trajectory_test.py  test_integrated_3d_viz.py  working_example.py
examples/configs/: basic_mission.yaml
quick_demo_results/: analysis_results.json  summary.txt
results/basic_transfer/: analysis_results.json  summary.txt
scenarios/: 01_basic_transfer.json  02_launch_windows.json  03_propulsion_comparison.json  04_pareto_optimization.json  05_constellation_optimization.json  06_isru_economics.json  07_environmental_economics.json  08_risk_analysis.json  09_complete_mission.json  10_multi_mission_campaign.json  11_powered_descent_mission.json  12_powered_descent_mission.json  12_powered_descent_mission.yaml  13_powered_descent_quick.json  README.md
scripts/: PRD.txt  benchmark_performance.py  test_prd_user_flows.py  verify_dependencies.py
scripts/utilities/: audit_structure.py  cleanup_repository.py  debug_hang_analysis.py  install_speedup_packages.py  run_analysis_examples.py  setup_integrated_system.py  test_all_scenarios.py  test_hang_location.py  test_monte_carlo_hang.py
src/: __init__.py  cli.py  cli_constellation.py  cli_legacy.py  lunar_horizon_optimizer.py  simple_optimizer.py
src/cli/: __init__.py  error_handling.py  main.py  output_manager.py  progress_tracker.py  scenario_manager.py
src/config/: __init__.py  costs.py  enums.py  isru.py  loader.py  manager.py  manager_old.py  mission_config.py  models.py  orbit.py  registry.py  spacecraft.py
src/economics/: __init__.py  advanced_isru_models.py  cost_models.py  financial_models.py  isru_benefits.py  reporting.py  scenario_comparison.py  sensitivity_analysis.py
src/extensibility/: __init__.py  base_extension.py  data_transform.py  extension_manager.py  plugin_interface.py  registry.py
src/optimization/: __init__.py  cost_integration.py  decision_vector.py  global_optimizer.py  (+5 more)
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
test_results/: analysis_results.json  summary.txt
tests/: COMPREHENSIVE_TEST_EXECUTION_REPORT.md  COMPREHENSIVE_TEST_REVIEW.md  QUICK_TEST_REFERENCE.md  README.md  TESTING_AUDIT.md  TEST_STATUS_UPDATE.md  TEST_SUITE_STATUS.md  __init__.py  conftest.py  run_comprehensive_test_analysis.py  run_comprehensive_tests.py  run_working_tests.py  test_config_loader.py  test_config_manager.py  test_config_models.py  test_config_registry.py  test_continuous_thrust.py  test_cost_learning_curves.py  test_decision_vector.py  test_descent_cost_integration.py  test_economics_core.py  test_economics_modules.py  test_environment.py  test_final_functionality.py  test_helpers.py  test_integration_tasks_3_4_5.py  test_multi_mission_optimization.py  test_optimization_basic.py  test_optimization_modules.py  test_physics_validation.py  test_powered_descent.py  test_prd_compliance.py  test_ray_optimization.py  test_real_fast_comprehensive.py  test_real_integration_fast.py  test_real_optimization_fast.py  test_real_trajectory_fast.py  test_real_working_demo.py  test_report.json  test_simple_coverage.py  (+15 more)
working_results/: analysis_results.json  summary.txt
(+76 files in other folders)
